# openclawtype-system

./: .env.example  .gitignore  AGENTS.md  JENKINS_PIPELINE.md  PRESENTATION_RUNBOOK.md  README.md  WORKSHOP_RUNBOOK.md  agent.json  agent.py  agent_workshop_steps.py  langgraph.json  langgraph.openclaw_path.json  langgraph.steps.json  notebook.md  pyproject.toml
agents/: model_config.py  openclaw_01_agent_and_filesystem.py  openclaw_01_core.py  openclaw_02_jenkins_tools.py  openclaw_02_workspace.py  openclaw_03_jenkins_tools.py  openclaw_03_vk_channel_and_bridge.py  openclaw_04_subagents.py  openclaw_04_vk_bridge.py  openclaw_05_swe_agent.py  step_01_minimal.py
connectors/: __init__.py  demo.py  jenkins.py  langgraph_bridge.py  telegram.py  vk.py
demo_fixtures/swe_stage_05/: vk_langgraph_bridge.py.before
openclawtype_ru_manim/: concat.txt  plan.md  script.py
presentation/: README.md  openclawtype_manim.py
presentation_opendesign/: 00_intro.html  index-v2.html  index.html  index2.html
scripts/: preflight_openclaw_workshop.py  reset_swe_demo.py  vk_langgraph_bridge.py
skills/product-research/: SKILL.md
skills/swe-resolution/: SKILL.md
tests/: test_project_shape.py
workshop_notebooks/: 00_full_interactive_workshop.ipynb  01_minimal_agent.ipynb  02_filesystem_backend.ipynb  03_demo_connector.ipynb  04_telegram_connector.ipynb  05_subagents_skills_memory.ipynb  06_swe_mode.ipynb  07_jenkins_connector.ipynb  08_single_notebook_langgraph_project.ipynb  README.md
workshop_notebooks/openclaw_path/: 00_from_claude_code_to_openclaw.ipynb  00_openclaw_intro.ipynb  (+15 more)
