[project]
name = "openclaw-deepagents-prototype"
version = "0.1.0"
description = "OpenClaw-like coding agent prototype using LangChain Deep Agents."
requires-python = ">=3.11"
dependencies = [
    "deepagents==0.6.11",
    "langgraph-cli[inmem]>=0.4.30,<0.5.0",
    "langchain-openai>=1.1.0",
    "langchain-openrouter>=0.2.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
